--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>Attack</groupId>
     <artifactId>Attack</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-
+    <modules>
+        <module>attack_games</module>
+    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert</artifactId>
+            <version>1.4</version>
+        </dependency>
+    </dependencies>
 </project>
